# lchain-agai-folders

SECTION 4 - AGENTS UNDER THE HOOD (1-4)/: pyproject.toml
sec10-build-a-doc-assistant/: .gitignore  ingestion.py  main.py  pyproject.toml
sec4_agents-under-the-hood-1-4/: 1_agent_loop_langchain_tool_calling.py  main.py  pyproject.toml  requirements.txt
sec4_agents-under-the-hood-1-4_2/: 1_agent_loop_langchain_tool_calling.py  2_agent_loop_langchain_tool_calling.py  3_raw_react_prompt_source.py  pyproject.toml
sec9-gist-of-RAG/: .gitignore  ingestion.py  main.py  pyproject.toml
