[project]
name = "sec4-agents-under-the-hood-1-4-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "python-dotenv>=1.2.2",
]
